# roland-rs

client/: build.sh  package-lock.json  package.json
client/src/lib/: logs.svelte.ts  utils.ts  ws.svelte.ts
client/src/lib/components/: app-sidebar.svelte
client/src/lib/components/ui/sidebar/: sidebar-trigger.svelte
client/src/lib/components/ui/slider/: slider.svelte
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/controller/: +page.svelte  controller.svelte.ts  gamepad.svelte.ts
client/src/routes/logs/: +page.svelte
firmware/: Cargo.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: hardware.rs  log.rs  main.rs  serial.rs  test.rs
firmware/src/drivers/: buzzer.rs  h_bridge.rs  mod.rs  pwm.rs  rgb_led.rs  servo.rs  track_sensor.rs  ultra_sensor.rs
firmware/src/util/: color.rs
roland/: Cargo.toml  build.sh
roland/src/: hardware.rs  main.rs
roland/src/backend/: mod.rs  pico.rs  roland.rs  serial.rs
roland/src/backend/pico/: mod.rs  sensors.rs
roland/src/server/: message.rs  ws.rs
roland/src/util/: mod.rs  pid.rs
server/: Cargo.toml
server/src/: main.rs  serial.rs
