[package]
edition = "2021"
name = "roland-uc"
version = "0.1.0"

[dependencies]
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-usb = "0.5.0"

defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

postcard = "1.0.0"
serde = { version = "1.0.0", default-features = false, features = ["derive"] }

cortex-m-rt = "0.7.0"
log = "0.4"
static_cell = "2.1.1"
heapless = "0.8.0"

[features]
default = ["embassy-rp/binary-info"]

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
