[package]
name = "roland"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-serial = "5.4.5"

serde = { version = "1.0.0", features = ["derive"] }
postcard = { version = "1.0.0", features = ["use-std"] }

log = "0.4.27"
simple_logger = "5.0.0"
anyhow = "1.0.99"
tokio-util = "0.7.16"
cobs = "0.4.0"
tokio-tungstenite = "0.28.0"
serde_json = "1.0.145"
futures = "0.3.31"
